# templates

./: .gitignore  README.md  main.py  pyproject.toml  selenium_start.py  workflow.txt
utils/: custom_functions.py  logger.py  logger_2.py  logger_3.py  loguru_1.1.py  loguru_4.py  loguru_5.py
